Code clean-up; Fixed test for empty ingredients response.